# ndare

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.rst  SECURITY.md  pyproject.toml  requirements.txt
docs/: make.bat
docs/source/: confdocs.py  index.rst  requirements.txt
docs/source/guide/: quickstart.rst  usage.rst
docs/source/reference/: class1.rst  class2.rst
dpypi/: make.bat
ndare/: __init__.py
ndare/base/: __init__.py
